fix: 2023 NTNU 程式設計二 助教批改解釋 - 作業二 title
chore: update 2023 NTNU 程式設計(二) 助教批改解釋 - 作業二 title

--- a/source/_posts/[2023 NTNU 程式設計二] 助教批改解釋 - 作業二.md
+++ b/source/_posts/[2023 NTNU 程式設計二] 助教批改解釋 - 作業二.md
@@ -1,5 +1,5 @@
 ---
-title: 2023 NTNU 程式設計(二) 助教批改解釋 - 作業一
+title: 2023 NTNU 程式設計(二) 助教批改解釋 - 作業二
 date: 2023-04-25 02:45:00
 updated: 2023-04-25 02:45:00
 highlight:
