chore: update 2023 NTNU 程式設計(二) 助教批改解釋 - 作業一.md

--- a/source/_posts/[2023 NTNU 程式設計二] 助教批改解釋 - 作業一.md
+++ b/source/_posts/[2023 NTNU 程式設計二] 助教批改解釋 - 作業一.md
@@ -25,8 +25,9 @@ tags:
 # 程設助教 judge 題目
 
 助教：蘇子權 SubaRya
-題目：hw0101, hw0102
-
+題目：
+    * [作業連結](https://drive.google.com/file/d/1GtQG4ZFi-GkuAun4insExypWhXxStdR9/view)
+    * 分配: hw0101, hw0102
 
 ## hw0101
 
